k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-recommender-api
  namespace: recipe-recommender
spec:
  selector:
    app: recipe-recommender-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
