k8s/base/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-recommender-ui
  namespace: recipe-recommender
spec:
  selector:
    app: recipe-recommender-ui
  ports:
    - name: http
      port: 80
      targetPort: 8501
  type: ClusterIP
